fix caption unreadable in dark theme

--- a/src/scss/components/_section.scss
+++ b/src/scss/components/_section.scss
@@ -10,3 +10,11 @@
     background-attachment: scroll;
     background-size: cover;
 }
+
+/* image caption background theme-dependent color */
+[data-bs-theme="light"] {
+    --img-border-color: #dddddd; /* Default light mode border color (primary) */
+}
+[data-bs-theme="dark"] {
+    --img-border-color: #6a6a6a; /* Custom border color for dark theme (orange) */
+}
